@@ -8,6 +8,14 @@ Zope Changes
 
     Bugs Fixed
 
+      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
+        exceptions onto ImportErrors:  don't do that!  Also, removed
+        mutable defaults from argument list, improved tests.
+
+      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
+        ModuleSecurity for failed imports, obscuring later attempts to
+        import the same broken module.
+
       - DateTime conversion of datetime objects with non-pytz tzinfo. 
         Timezones() returns a copy of the timezone list (allows tests to run).
         (Backport of r89373 from trunk).
